added user availability.